--- a/src/components/header.njk
+++ b/src/components/header.njk
@@ -21,6 +21,9 @@
 
     <div class="hidden md:flex items-center space-x-4">
       <a href="{{ site.forms.mailingList }}" target="_blank" class="btn btn-primary">Join</a>
+      <button id="theme-toggle" class="btn btn-outline" aria-label="Toggle dark mode">
+        <span id="theme-icon">🌙</span>
+      </button>
     </div>
 
     <div class="md:hidden">
