--- a/src/components/hero.njk
+++ b/src/components/hero.njk
@@ -4,7 +4,7 @@
     <p class="hero-sub">Working to reduce risks from advanced AI by raising awareness, upskilling and creating opportunities for a safer AI world of tomorrow.</p>
     <div class="flex flex-col sm:flex-row gap-4 justify-center mt-6">
       <a href="{{ site.forms.mailingList }}" target="_blank" class="btn btn-primary text-lg">Join our Community</a>
-      <a href="#learn-more" class="btn btn-outline text-white border-white hover:bg-white hover:text-slate-900">Learn More</a>
+      <a href="#learn-more" class="btn btn-outline text-white dark:text-white border-white dark:border-white hover:bg-white dark:hover:bg-primary-700 hover:text-slate-900 dark:hover:text-primary-100">Learn More</a>
     </div>
   </div>
 </section>
