--- a/src/components/cta.njk
+++ b/src/components/cta.njk
@@ -4,7 +4,9 @@
       <h2>Ready to Join the Community?</h2>
       <p>Be part of a global movement working toward safer, more beneficial AI development.</p>
       <div class="flex flex-col sm:flex-row gap-4 justify-center mt-6">
-        <a href="{{ site.forms.mailingList }}" target="_blank" class="btn btn-cta">Subscribe to Newsletter</a>
+        <a href="{{ site.social.discord }}" target="_blank" rel="noopener" class="btn btn-cta">
+          Join our Discord
+        </a>
         <a href="/events/" class="btn btn-ghost">Explore Events</a>
       </div>
     </div>
