--- a/src/components/header.njk
+++ b/src/components/header.njk
@@ -20,7 +20,7 @@
     </ul>
 
     <div class="hidden md:flex items-center space-x-4">
-      <a href="{{ site.forms.mailingList }}" target="_blank" class="btn btn-primary">Join</a>
+      <a href="{{ site.social.discord }}" target="_blank" class="btn btn-primary">Join</a>
       <button id="theme-toggle" class="btn btn-outline" aria-label="Toggle dark mode">
         <span id="theme-icon">🌙</span>
       </button>
